# DailyWallpaper

./: Cargo.toml  README.md  build.bat
resource/: resource.rc
src/: main.rs
