[package]
name = "DailyWallpaper"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[build-dependencies]
embed-resource = "1.4"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vc-ltl = "5.0.4"
winapi = { version = "0.3", features = ["winuser"] }
anyhow = "1.0.56"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
